--- a/views/favorite-genre.ejs
+++ b/views/favorite-genre.ejs
@@ -1,107 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Select Your Favorite Genre</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
-    crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/styles.css">
-    <style>
-        /* Custom styles */
-        .container-myreads {
-            max-width: 1000px; /* Adjust the width as needed */
-            margin: 0 auto; /* Center the container */
-        }
+<%- include('layout') %>
 
-        .navbar-text {
-            color: #382125; /* Text color */
-            font-family: Helvetica, Arial, sans-serif;
-        }
-
-        .message {
-            color: #382125; /* Text color */
-            font-family: Georgia, 'Times New Roman', serif;
-        }
-
-        .second-message {
-            color: #4d5443; 
-            font-family: Helvetica, Arial, sans-serif;
-            background-color: #e4f4da; /* Background color */
-            width: 80%;
-            font-size:smaller;
-            padding: 10px;
-            margin: 0 auto;
-            margin-bottom: 20px;
-        }
-
-        .custom-checkbox {
-            background-color: #f7f7f7;
-            padding: 10px;
-            margin-top: 10px; /* Add some margin */
-        }
-
-        /* Hover effect */
-        .custom-checkbox:hover {
-            background-color: #e0e0e0; /* Change background color on hover */
-            cursor: pointer; /* Change cursor to pointer */
-        }
-
-        /* Disabled button styles */
-        .disabled-button {
-            background-color: #f3f3f3;
-            color: #cccccc;
-            font-family: Helvetica, Arial, sans-serif;
-        }
-
-         /* Enabled button styles */
-         .enabled-button {
-            background-color: #cccccc;
-            color: #333333;
-            font-family: Helvetica, Arial, sans-serif;
-        }
-    </style>
-</head>
-<body style="background-color: #ffffff;">
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #f4f1ea;">
-        <div class="container-fluid container-myreads"> <!-- Added the container class here -->
+<title><%= title %></title>         
+    
+<body class="favorite-genre-body">
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid favorite-genre-container-myreads">
             <!-- Brand -->
             <a class="navbar-brand fs-3 custom-navbar-brand" href="/myreads">my<span class="fw-bold">reads</span></a>
             <span class="navbar-text fs-5 ms-5">Getting Started</span>
         </div>
     </nav>
-    <div class="message fw-bold mt-2 fs-4 text-center">
+    <div class="favorite-genre-message fw-bold mt-2 fs-4 text-center">
         Next, select your favorite genres.
     </div>
     <div class="container">
-        <div class="second-message fw-bold mt-2 text-center">
+        <div class="favorite-genre-second-message fw-bold mt-2 text-center">
             We use your favorite genres to make better book recommendations and tailor what you see in your Updates feed.
         </div>
     </div>
     <div class="container">
         <form action="/favorite-genre" method="POST">
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <div class="row">
                 <div class="col-md-3">
-                    <div class="custom-checkbox" onclick="toggleCheckbox('artCheckbox')">
+                    <div class="favorite-genre-custom-checkbox" onclick="toggleCheckbox('artCheckbox')">
                         <input type="checkbox" id="artCheckbox" name="genre" value="art">
                         <label for="artCheckbox">Art</label>
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="custom-checkbox" onclick="toggleCheckbox('classicsCheckbox')">
+                    <div class="favorite-genre-custom-checkbox" onclick="toggleCheckbox('classicsCheckbox')">
                         <input type="checkbox" id="classicsCheckbox" name="genre" value="classics">
                         <label for="classicsCheckbox">Classics</label>
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="custom-checkbox" onclick="toggleCheckbox('contemporaryCheckbox')">
+                    <div class="favorite-genre-custom-checkbox" onclick="toggleCheckbox('contemporaryCheckbox')">
                         <input type="checkbox" id="contemporaryCheckbox" name="genre" value="contemporary">
                         <label for="contemporaryCheckbox">Contemporary</label>
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="custom-checkbox" onclick="toggleCheckbox('crimeCheckbox')">
+                    <div class="favorite-genre-custom-checkbox" onclick="toggleCheckbox('crimeCheckbox')">
                         <input type="checkbox" id="crimeCheckbox" name="genre" value="crime">
                         <label for="crimeCheckbox">Crime</label>
                     </div>
@@ -109,25 +49,25 @@
             </div>
             <div class="row">
                 <div class="col-md-3">
-                    <div class="custom-checkbox" onclick="toggleCheckbox('fictionCheckbox')">
+                    <div class="favorite-genre-custom-checkbox" onclick="toggleCheckbox('fictionCheckbox')">
                         <input type="checkbox" id="fictionCheckbox" name="genre" value="fiction">
                         <label for="fictionCheckbox">Fiction</label>
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="custom-checkbox" onclick="toggleCheckbox('historicalFictionCheckbox')">
+                    <div class="favorite-genre-custom-checkbox" onclick="toggleCheckbox('historicalFictionCheckbox')">
                         <input type="checkbox" id="historicalFictionCheckbox" name="genre" value="historical-fiction">
                         <label for="historicalFictionCheckbox">Historical Fiction</label>
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="custom-checkbox" onclick="toggleCheckbox('historyCheckbox')">
+                    <div class="favorite-genre-custom-checkbox" onclick="toggleCheckbox('historyCheckbox')">
                         <input type="checkbox" id="historyCheckbox" name="genre" value="history">
                         <label for="historyCheckbox">History</label>
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="custom-checkbox" onclick="toggleCheckbox('humorCheckbox')">
+                    <div class="favorite-genre-custom-checkbox" onclick="toggleCheckbox('humorCheckbox')">
                         <input type="checkbox" id="humorCheckbox" name="genre" value="humor">
                         <label for="humorCheckbox">Humor and Comedy</label>
                     </div>
@@ -135,25 +75,25 @@
             </div>
             <div class="row">
                 <div class="col-md-3">
-                    <div class="custom-checkbox" onclick="toggleCheckbox('nonfictionCheckbox')">
+                    <div class="favorite-genre-custom-checkbox" onclick="toggleCheckbox('nonfictionCheckbox')">
                         <input type="checkbox" id="nonfictionCheckbox" name="genre" value="nonfiction">
                         <label for="nonfictionCheckbox">Nonfiction</label>
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="custom-checkbox" onclick="toggleCheckbox('religionCheckbox')">
+                    <div class="favorite-genre-custom-checkbox" onclick="toggleCheckbox('religionCheckbox')">
                         <input type="checkbox" id="religionCheckbox" name="genre" value="religion">
                         <label for="religionCheckbox">Religion</label>
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="custom-checkbox" onclick="toggleCheckbox('scienceCheckbox')">
+                    <div class="favorite-genre-custom-checkbox" onclick="toggleCheckbox('scienceCheckbox')">
                         <input type="checkbox" id="scienceCheckbox" name="genre" value="science">
                         <label for="scienceCheckbox">Science</label>
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="custom-checkbox" onclick="toggleCheckbox('thrillerCheckbox')">
+                    <div class="favorite-genre-custom-checkbox" onclick="toggleCheckbox('thrillerCheckbox')">
                         <input type="checkbox" id="thrillerCheckbox" name="genre" value="thriller">
                         <label for="thrillerCheckbox">Thriller</label>
                     </div>
@@ -162,14 +102,12 @@
 
             <div class="row mt-5 mb-5">
                 <div class="col-md-12 text-center">
-                    <button id="submitButton" class="btn disabled-button" disabled>Select at least one genre to continue</button>
+                    <button id="submitButton" class="btn favorite-genre-disabled-button" disabled>Select at least one genre to continue</button>
                 </div>
             </div>
         </form>
     </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
-    crossorigin="anonymous"></script>
+
     <script>
         function toggleCheckbox(checkboxId) {
             var checkbox = document.getElementById(checkboxId);
@@ -182,17 +120,16 @@
             // Enable or disable the button based on checkbox status
             var submitButton = document.getElementById('submitButton');
             if (checked) {
-                submitButton.classList.remove('disabled-button');
-                submitButton.classList.add('enabled-button');
+                submitButton.classList.remove('favorite-genre-disabled-button');
+                submitButton.classList.add('favorite-genre-enabled-button');
                 submitButton.disabled = false;
                 submitButton.textContent = 'Continue';
             } else {
-                submitButton.classList.remove('enabled-button');
-                submitButton.classList.add('disabled-button');
+                submitButton.classList.remove('favorite-genre-enabled-button');
+                submitButton.classList.add('favorite-genre-disabled-button');
                 submitButton.disabled = true;
                 submitButton.textContent = 'Select at least one genre to continue';
             }
         }
     </script>
 </body>
-</html>
