--- a/views/admin/add_book.ejs
+++ b/views/admin/add_book.ejs
@@ -1,4 +1,4 @@
-<%- include('layout') %>
+<%- include('../layout') %>
 
 <title><%= title %></title>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -28,7 +28,7 @@
             </ul>
         <% } %>
     </div>
-    <div class="container" style="width: 550px;">
+    <main class="container" style="width: 550px;">
         <h1 class="mb-4">Add a New Book</h1>
         <form id="admin-panel" action="/admin/add_book" method="POST" enctype="multipart/form-data">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
@@ -84,7 +84,7 @@
             </div>
             <button id="submitButton" type="submit" class="btn btn-primary">Add Book</button>
         </form>
-    </div>
+    </main>
 
 <script>
 
